# SVS_dataset_construction

./: .gitignore  GEMINI.md  README.md  pyproject.toml  run_basic_pitch.sh
src/svs_dataset_contruction/: __init__.py  aligner.py  config.py  extract_midi_batch.py  extract_midi_for_folder.py  mfa_segment_aligner.py  midi_phoneme_aligner.py  note_extractor.py  pipeline.py  preparator.py  run_batch_fa.py  run_full_pipeline.py  run_mfa_align.py  segmenter.py  separator.py  transcriber.py
src/svs_dataset_contruction/aligners/: mfa.py  midi_phoneme.py
src/svs_dataset_contruction/extractors/: basic_pitch.py  game.py  note_extractor.py  rmvpe.py  rosvot.py
src/svs_dataset_contruction/scripts/: compare_pitch_rmvpe.py  extract_midi_batch.py  extract_midi_for_folder.py  migrate_data.py  run_aligned_ds_batch.py  run_batch_fa.py
src/svs_dataset_contruction/utils/: segmenter.py  separator.py  transcriber.py  visualization.py
